# ojs-rust-contrib

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
ojs-actix/: Cargo.toml  README.md
ojs-actix/examples/: Cargo.toml  README.md
ojs-actix/examples/src/: main.rs
ojs-actix/src/: app_data.rs  extractor.rs  health.rs  lib.rs  middleware.rs  worker.rs
ojs-actix/tests/: integration.rs
ojs-axum/: Cargo.toml  README.md
ojs-axum/examples/: Cargo.toml  README.md  docker-compose.yml
ojs-axum/examples/src/: main.rs  worker.rs
ojs-axum/src/: cron.rs  error.rs  events.rs  extract.rs  health.rs  layer.rs  lib.rs  shutdown.rs  worker.rs
ojs-axum/tests/: integration.rs
ojs-diesel/: Cargo.toml  README.md
ojs-diesel/examples/: Cargo.toml  README.md  docker-compose.yml
ojs-diesel/examples/src/: main.rs
ojs-diesel/src/: enqueue.rs  lib.rs  outbox.rs  publisher.rs
ojs-diesel/tests/: integration.rs
