[workspace]
members = ["ojs-actix", "ojs-axum", "ojs-diesel"]
exclude = ["ojs-actix/examples", "ojs-axum/examples", "ojs-diesel/examples"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/openjobspec/ojs-rust-contrib"

[workspace.dependencies]
ojs = { path = "../ojs-rust-sdk", features = ["reqwest-transport"] }
