[package]
name = "ojs-actix"
version = "0.2.0"
description = "Actix-web middleware and app data integration for OJS"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["jobs", "queue", "actix", "ojs"]
categories = ["web-programming"]
readme = "README.md"

autoexamples = false

[dependencies]
ojs = { workspace = true }
actix-web = "4"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
