[package]
name = "ojs-axum"
version = "0.2.0"
description = "Axum state extractor and Tower layer for OJS"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["jobs", "queue", "axum", "ojs", "tower"]
categories = ["web-programming"]
readme = "README.md"

autoexamples = false

[dependencies]
ojs = { workspace = true }
axum = "0.8"
tower = "0.5"
tokio = { version = "1", features = ["rt", "signal"] }
tracing = "0.1"
serde_json = "1"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
hyper = "1"
serde_json = "1"
