[package]
name = "ojs-actix-example"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
ojs = { version = "0.2", features = ["reqwest-transport"] }
ojs-actix = { path = ".." }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
